# tafeng

./: .gitignore  LICENSE  README.md  Readme_EN.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.worker.json  vite.config.ts  wrangler.toml
rust-gateway/: Cargo.toml
rust-gateway/src/: main.rs
shared/: types.ts
src/: App.tsx  main.tsx  styles.css
src/components/: CommandHistoryPanel.tsx  ConnectionPanel.tsx  FileEditor.tsx  LoginGate.tsx  MonitorPanel.tsx  SettingsPanel.tsx  TerminalPane.tsx
src/lib/: api.ts  i18n.ts  sample.ts
worker/: auth.ts  index.ts  sshBridge.ts  storage.ts
